--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <h1>Login Authentication System in Flask.</h1>
+    <h1>Login Authentication System </h1>
     <a href="{{ url_for('login') }}">Login Page</a><br>
     <a href="{{ url_for('register') }}">Register Page</a><br>
-
 </body>
 
 </html>
